--- a/app/views/posts/home.html.erb
+++ b/app/views/posts/home.html.erb
@@ -3,3 +3,5 @@
 <p>We are proud young lambs</p>
 
 <%= link_to 'Posts', posts_path %>
+<%= link_to 'Sign In', new_user_session_path %>
+<%= link_to 'Log Out', destroy_user_session_path, method: :delete %>
