--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,27 @@
-<div class="container">
-<h2><%= @post.title %></h2>
-<p><%= @post.content %></p>
-</div>
+<p id="notice"><%= notice %></p>
 
-<%= render 'partials/comment', comment: @comment, post: @post%>
+<p>
+  <strong>Title:</strong>
+  <%= @post.title %>
+</p>
 
-<p><%= @comment.content %></p>
+<p>
+  <strong>Content:</strong>
+  <%= @post.content %>
+</p>
+
+<p>
+  <strong>User:</strong>
+  <%= @post.user.email %>
+</p>
+
+<%= link_to 'Edit', edit_post_path(@post) %> |
+<%= link_to 'Back', posts_path %>
+
+
+<%= render 'comments/form', comment: @comment %>
+
+<% @comments.each do |comment| %>
+  <p><%= comment.user.email %> - <%= comment.created_at %></p>
+  <p><%= comment.content %></p>
+<% end %>
