--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,4 @@
  *= require_tree .
  *= require_self
  */
-@import "materialize/components/color";
-$primary-color: color("green", "lighten-1") !default;
-$secondary-color: color("deep-orange", "lighten-2") !default;
-@import 'materialize';
+@import 'bulma';
