--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
-<h1 class="title">HELLO, WELCOME TO LAMBTOWN</h1>
+<h1 class="title is-1">HELLO, WELCOME TO LAMBTOWN</h1>
 
-<p>We are proud young lambs</p>
+<h2 class="subtitle">We are proud young lambs</h2>
 
 <%= link_to 'Posts', posts_path %>
 <%= link_to 'Sign In', new_user_session_path %>
