--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -12,12 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :content %>
+    <%= f.label :comment %>
     <%= f.text_area :content %>
   </div>
 
   <div class="field">
-    <%#= f.hidden_field :post_id, value: @post.id %>
+
   </div>
 
   <div class="actions">
