--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="nav has-shadow">
   <div class="nav-left">
     <a class="nav-item">
-      
+      <img src="http://bulma.io/images/bulma-logo.png" alt="Bulma logo">
     </a>
   </div>
 
