--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,62 +1,46 @@
 <p id="notice"><%= notice %></p>
 <% @posts.each do |post| %>
-<div class="box">
-  <article class="media">
-    <div class="media-left">
-      <figure class="image is-64x64">
-        <img src="http://bulma.io/images/placeholders/128x128.png" alt="Image">
-      </figure>
-    </div>
-    <div class="media-content">
-      <div class="content">
-        <p>
-          <strong><%= post.title %></strong> <small><%= post.user.email %></small> <small>created <%= time_ago_in_words(post.created_at) %> ago</small>
-          <br>
-          <%= post.content %>
-        </p>
+  <div class="box">
+    <article class="media">
+      <div class="media-left">
+        <figure class="image is-64x64">
+          <img src="http://bulma.io/images/placeholders/128x128.png" alt="Image">
+        </figure>
       </div>
-      <nav class="level is-mobile">
-        <div class="level-left">
-          <a class="level-item">
-            <span class="icon is-small"><i class="fa fa-reply"></i></span>
-          </a>
-          <a class="level-item">
-            <span class="icon is-small"><i class="fa fa-retweet"></i></span>
-          </a>
-          <a class="level-item">
-            <span class="icon is-small"><i class="fa fa-heart"></i></span>
-          </a>
+      <div class="media-content">
+        <div class="content">
+          <p>
+            <strong><%= link_to post.title, post %></strong> <small><%= post.user.email %></small> <small>created <%= time_ago_in_words(post.created_at) %> ago</small>
+            <br>
+            <%= post.content %>
+          </p>
         </div>
-      </nav>
-    </div>
-  </article>
-</div>
+        <nav class="level is-mobile">
+          <div class="level-left">
+            <a class="level-item">
+              <span class="icon is-small"><i class="fa fa-reply"></i></span>
+            </a>
+            <a class="level-item">
+              <span class="icon is-small"><i class="fa fa-retweet"></i></span>
+            </a>
+            <a class="level-item">
+              <span class="icon is-small"><i class="fa fa-heart"></i></span>
+            </a>
+          </div>
+        </nav>
+        <div class="media-content">
+          <div class="content">
+            <p>
+              <strong>User Name -- Time </strong>
+              <br>
+              The post comment goes here. I need to try and work out how to get the post index method to find each post_id, and find the matching comment.
+              <br>
+              <small><a>Like</a> · <a>Reply</a> · 3 hrs</small>
+            </p>
+          </div>
+         </div>
+    </article>
+  </div>
 <% end %>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.content %></td>
-        <td><%= post.user.email %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
 
 <%= link_to 'New Post', new_post_path %>
